Add Bloom and grids from synthcity

--- a/index.html
+++ b/index.html
@@ -247,6 +247,149 @@
 		</div>
 
 
+
+
+
+
+
+
+
+		<script type="x-shader/x-vertex" id="vertexshader">
+
+			varying vec2 vUv;
+
+			void main() {
+
+				vUv = uv;
+
+				gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
+
+			}
+
+		</script>
+
+		<script type="x-shader/x-fragment" id="fragmentshader">
+
+			uniform sampler2D baseTexture;
+			uniform sampler2D bloomTexture;
+
+			varying vec2 vUv;
+
+			vec4 getTexture( sampler2D texelToLinearTexture ) {
+
+				return mapTexelToLinear( texture2D( texelToLinearTexture , vUv ) );
+
+			}
+
+			void main() {
+
+				gl_FragColor = ( getTexture( baseTexture ) + vec4( 1.0 ) * getTexture( bloomTexture ) );
+
+			}
+
+		</script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+		<script id="vertexShaderAudio" type="x-shader/x-vertex">
+
+			varying vec2 vUv;
+
+			void main() {
+
+				vUv = uv;
+
+				gl_Position = vec4( position, 1.0 );
+
+			}
+
+		</script>
+
+		<script id="fragmentShaderAudio" type="x-shader/x-fragment">
+
+			uniform sampler2D tAudioData;
+			varying vec2 vUv;
+
+			void main() {
+
+				vec3 backgroundColor = vec3( 0.125, 0.125, 0.125 );
+				vec3 color = vec3( 1.0, 1.0, 0.0 );
+
+				float f = texture2D( tAudioData, vec2( vUv.x, 0.0 ) ).r;
+
+				float i = step( vUv.y, f ) * step( f - 0.0125, vUv.y );
+
+				gl_FragColor = vec4( mix( backgroundColor, color, i ), 1.0 );
+
+			}
+
+		</script>
+
+
+
+
+		<script type="x-shader/x-vertex" id="vertexShaderWireframe">
+
+			attribute vec3 center;
+			varying vec3 vCenter;
+
+			void main() {
+
+				vCenter = center;
+
+				gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
+
+			}
+
+		</script>
+
+		<script type="x-shader/x-fragment" id="fragmentShaderWireframe">
+
+			uniform float widthFactor;
+			uniform float edgeThreshold;
+
+			varying vec3 vCenter;
+
+			float edgeFactorTri() {
+
+				vec3 d = fwidth( vCenter.xyz );
+
+				vec3 a3 = smoothstep( vec3( 0.0 ), d * widthFactor, vCenter.xyz );
+
+				return min( min( a3.x, a3.y ), a3.z );
+
+			}
+
+			void main() {
+
+				if ( edgeFactorTri() > edgeThreshold ) {
+					gl_FragColor = vec4( 0.9, 0.0, 0.0, 1.0 );
+				} else {
+					gl_FragColor = gl_FrontFacing ? vec4( 0.0, 0.9, 0.0, 1.0 ) : vec4( 0.0, 0.0, 0.9, 1.0 );
+				}
+			}
+
+		</script>
+
+
+
+
+
+
+
+
+
 		<script>
 			var DEBUG = window.location.href.indexOf('debug=true') > 0;
 			var debugPrint = DEBUG ? function () {
@@ -298,8 +441,6 @@
 		<script src="dreamsynth/loops.js"></script>
 		<script src="dreamsynth/Floor.js"></script>
 
-
-	
 
 
 
