--- a/index.html
+++ b/index.html
@@ -669,7 +669,13 @@
 
 
 
-		<script>
+		<script type="module">
+
+import {BLOOM_SCENE} from './dreamsynth/Bloom.js';
+
+
+
+
 			var ocean;
 
 			var container, stats, controls;
@@ -691,6 +697,7 @@
 				trees = Hill_rebuild(0);
 				for ( var j = 0; j < trees.length; j++) {
 					var tree = trees[j].child;
+					tree.group.layers.enable( BLOOM_SCENE );
 					scene.add( tree.group );
 				}
 			}
