REMOVE THIS: temprorary fix to get it working again

--- a/index.html
+++ b/index.html
@@ -669,9 +669,10 @@
 
 
 
-		<script type="module">
+		<script>
 
-import {BLOOM_SCENE} from './dreamsynth/Bloom.js';
+const BLOOM_SCENE = 1;
+// import {BLOOM_SCENE} from './dreamsynth/Bloom.js';
 
 
 
