Modularized everything so it works in webpack

--- a/public/index.html
+++ b/public/index.html
@@ -413,43 +413,22 @@
 		</script>
 
 
-		<script src="js/three.js"></script>
 		<script src="a11y/A11yHelper.js"></script>
-
-		<script src="js/loaders/MTLLoader.js"></script>
-		<script src="js/loaders/OBJLoader.js"></script>
-
-		<script src="js/controls/OrbitControls.js"></script>
 
 		<script src="js/libs/dat.gui.min.js"></script>
 		<script src="js/libs/stats.min.js"></script>
 
 		<script src="js/libs/Tween.min.js"></script>
 
-		<script src="js/objects/Water.js"></script>
-		<script src="js/objects/Sky.js"></script>
 
 		<script src="js/WebGL.js"></script>
 
-		<script type="text/javascript" src="dreamsynth/Tone.min.js"></script>
-		<script type="text/javascript" src="dreamsynth/StartAudioContext.js"></script>
-
-		<script src="dreamsynth/LetterDistributions.js"></script>
-		<script src="dreamsynth/synth.js"></script>
-		<script src="dreamsynth/palettes.js"></script>
-		<script src="dreamsynth/dreamsynth.js"></script>
-		<script src="dreamsynth/loops.js"></script>
-		<script src="dreamsynth/Floor.js"></script>
-		<script src="dreamsynth/Ocean.js"></script>
-		<script src="dreamsynth/Ui.js"></script>
+		<script type="text/javascript" src="js/libs/Tone.min.js"></script>
+		<script type="text/javascript" src="js/libs/StartAudioContext.js"></script>
 
 
 
 
-
-		<script>
-			
-		</script>
 
 
 
