--- a/public/index.html
+++ b/public/index.html
@@ -420,9 +420,10 @@
 	  "loop_chords": calculateProbability(0.5),
 	  "loop_latin": calculateProbability(0.24),
 	  "loop_techno": calculateProbability(0.1),
+	  "isMultipalette": calculateProbability(0.2),
 	}
 	debugPrint('features: ', window.$fxhashFeatures);
-	
+
 		</script>
 	
 	
