Add secondary loading bar for sounds only

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,11 @@ body {
 				<button class="start" id="startButton">Loading...</button>
 			</div>
 		</div>
-
+		<div id="secondaryLoading" class="secondaryLoading">
+			<div class="dialog">
+				<button>Loading...</button>
+			</div>
+		</div>
 
 
 
