Update with new samples/loops. Change scale to E Dorian. adjust volumes

--- a/public/index.html
+++ b/public/index.html
@@ -466,7 +466,8 @@ html .about .info {
 	  "loop_bell": calculateProbability(0.8),
 	  "loop_chords": calculateProbability(0.5),
 	  "loop_latin": calculateProbability(0.24),
-	  "loop_techno": calculateProbability(0.1),
+	  "loop_short": calculateProbability(0.35),
+	  "lively": calculateProbability(0.3),
 	  "isMultipalette": calculateProbability(0.8),
 	}
 	debugPrint('features: ', window.$fxhashFeatures);
