Update screenshot, description

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>dreamsynth - odbol</title>
+		<title>mechatropolis - odbol</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
-		<meta property="og:url"                content="http://odbol.com/dreamsynth" />
-		<meta property="og:title"              content="dreamsynth" />
-		<meta property="og:description"        content="I saw this in a dream. Then I made it into a musical instrument." />
-		<meta property="og:image"              content="http://odbol.com/dreamsynth/dreamsynth-screenshot.png" />
+		<meta property="og:url"                content="https://odbol.com/mechatropolis" />
+		<meta property="og:title"              content="mechatropolis" />
+		<meta property="og:description"        content="An ancient city, built by beings unknown long before the dregs of our time, dots a familiar landscape.  What somber secrets does the city trap within its sonic boundaries? Wind whispers through the gaps of the abandoned buildings, and sometimes strange machinery can be heard ticking off below the ground. A light touch triggers reverberations into the barren wastes surrounding the mechatropolis." />
+		<meta property="og:image"              content="https://odbol.com/mechatropolis/dreamsynth-screenshot.png" />
    
     <script id="fxhash-snippet">
       //---- do not edit the following code (you can indent as you wish)
