fix(spheres): adjust probabilities of loops for more chillage

--- a/public/index.html
+++ b/public/index.html
@@ -463,11 +463,11 @@ html .about .info {
 	}
 	
 	window.$fxhashFeatures = {
-	  "loop_bell": calculateProbability(0.8),
-	  "loop_chords": calculateProbability(0.5),
-	  "loop_latin": calculateProbability(0.24),
-	  "loop_short": calculateProbability(0.35),
-	  "lively": calculateProbability(0.3),
+	  "loop_bass": calculateProbability(0.3),
+	  "loop_chords": calculateProbability(0.4),
+	  "loop_latin": calculateProbability(0.1),
+	  "loop_drums": calculateProbability(0.3),
+	  "lively": calculateProbability(0.7),
 	  "isMultipalette": calculateProbability(0.8),
 	}
 	debugPrint('features: ', window.$fxhashFeatures);
