feat(spheres): change samples to be more chill/ambient. much better

--- a/public/index.html
+++ b/public/index.html
@@ -463,7 +463,8 @@ html .about .info {
 	}
 	
 	window.$fxhashFeatures = {
-	  "loop_bleeps": calculateProbability(0.3),
+	  "loop_bass": calculateProbability(0.5),
+	//   "loop_bleeps": calculateProbability(0.3),
 	  "loop_chords": calculateProbability(0.4),
 	  "loop_latin": calculateProbability(0.1),
 	  "loop_drums": calculateProbability(0.3),
