feat(spheres): update description/screenshot/meta. add story and secret lyrics

--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,17 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 
-		<meta property="og:url"                content="https://odbol.com/mechatropolis" />
-		<meta property="og:title"              content="mechatropolis" />
-		<meta property="og:description"        content="An ancient city, built by beings unknown long before the dregs of our time, dots a familiar landscape.  What somber secrets does the city trap within its sonic boundaries? Wind whispers through the gaps of the abandoned buildings, and sometimes strange machinery can be heard ticking off below the ground. A light touch triggers reverberations into the barren wastes surrounding the mechatropolis." />
-		<meta property="og:image"              content="https://odbol.com/mechatropolis/dreamsynth-screenshot.png" />
-   
-    <script id="fxhash-snippet">
+		<meta property="og:url"                content="https://odbol.com/ascension-of-the-builders" />
+		<meta property="og:title"              content="ascension of the builders" />
+		<meta property="og:description"        content="Their city consumed by flames of a dying star, The Builders looked back in reminiscent grace, their memories decaying. As the solar conflagration returned their blood to the dust beneath the streets, a curious force swept through their physical bodies, separating flesh and consciousness from their souls. Reborn as spheres of plasma energy, those who built the ancient city from sinew and steel begin to ascend. The mechatropolis receding quickly below them, their memories erased, The Ascended begin on their forever upward path toward new understandings of the oldest knowledge." />
+		<meta property="og:image"              content="https://odbol.com/ascension-of-the-builders/ascension-screenshot.jpg" />
+
+
+
+
+
+
+	<script id="fxhash-snippet">
       //---- do not edit the following code (you can indent as you wish)
       let alphabet = "123456789abcdefghijkmnopqrstuvwxyzABCDEFGHJKLMNPQRSTUVWXYZ"
       var fxhash = "oo" + Array(49).fill(0).map(_=>alphabet[(Math.random()*alphabet.length)|0]).join('')
@@ -509,7 +514,44 @@ html .about .info {
 
 
 
+		<pre style="display:none">
+			"A Dying Robot's Last Dance" by City of the Asleep
 
+			ease into the fade
+			that a whisper generates
+			a painful tide has resurrected
+			connotative frames
+			seen through scarlet gauze
+			as memories decay
+			a wound that time might have mended
+			had i not looked away
+
+			search the sky one last time
+			before the flames consume your eyes
+
+			silence speaks through a lipless mouth
+			of reminiscent grace
+			the wisdom realized in the moment
+			sepia turns to grey
+
+			it cannot die if you refuse to morn it
+			it can't be born if you deny its message
+			nothing stops the will that time ignores
+			what can't release can never be forgiven
+			what cannot change is doomed to be forsaken
+			the one belief that cannot be mistaken
+			is this
+
+			the words you whisper as the shadows grew
+			the waves of light recede from burning shores
+			echo back to everyone you've been
+			reminding them of what you've come to be
+
+			search the sky one last time
+			before the flames consume your eyes
+			deny regret, embrace defeat
+			and so consumed, become complete
+		</pre>
 
 
 
